# 1brc-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
